[package]
name = "tcn_client"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>, ivanschuetz <ivanhp978@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "tcn_client"
crate-type = ["dylib"] # "cdylib", "staticlib",

[dependencies]
# persy = "0.9"
# once_cell = "1.3.1"
# reqwest = { version = "0.10.2", features = ["blocking", "json"] }
# cbindgen = "0.9.0"
# serde_json = "1.0"
# serde = "1.0"
# ios
# libc = "0.2"
# core-foundation = "0.6.2"
# base64 = "0.12.1"
# chrono = "0.4"
# confy = "0.4.0"
# parking_lot = "0.10.2"
# uuid = { version = "0.8.1", features = ["v4"] }

# [dependencies.tcn]
# git = "https://github.com/TCNCoalition/TCN.git"
# branch = "main"
