[package]
name = "coepi_core"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>, ivanschuetz <ivanhp978@gmail.com>"]
edition = "2018"

[lib]
name = "coepi_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
persy = "0.9"
once_cell = "1.3.1"
cbindgen = "0.9.0"
serde_json = "1.0"
serde = "1.0"
log = "0.4.8"
base64 = "0.12.1"
chrono = "0.4"
confy = "0.4.0"
parking_lot = "0.10.2"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7"
hex = "0.4.2"
serde-big-array = "0.3.0"
rayon = "1.1"

[dependencies.reqwest]
default-features = false # do not include the default features, and optionally
version = "0.10.2"
features = ["blocking", "json", "rustls-tls"]


[target.'cfg(target_os="ios")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[dependencies.tcn]
git = "https://github.com/TCNCoalition/TCN.git"
rev = "c8de5a7a6a0bd681f69f27e77a493832af47e482"
