[package]
name = "coepi_core"
version = "0.1.36"
authors = ["theseriousadult <jack@gallabytes.com>, ivanschuetz <ivanhp978@gmail.com>, duskoo <dusko.ojdanic@gmail.com>"]
edition = "2018"

[lib]
name = "coepi_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
once_cell = "1.4.0"
cbindgen = "0.14.3"
serde_json = "1.0"
serde = "1.0"
log = "0.4.8"
base64 = "0.13.0"
chrono = "0.4"
parking_lot = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7"
hex = "0.4.2"
serde-big-array = "0.3.0"
rayon = "1.4.1"
rusqlite = {version = "0.24.0", features = ["bundled", "vtab", "array"]}
timer = "0.2.0"

[dependencies.reqwest]
default-features = false # do not include the default features, and optionally
version = "0.10.2"
features = ["blocking", "json", "rustls-tls"]


[target.'cfg(any(target_os="ios", target_os="macos"))'.dependencies]
libc = "0.2"
core-foundation = "0.9.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.17.0", default-features = false }

[dependencies.tcn]
git = "https://github.com/TCNCoalition/TCN.git"
rev = "c8de5a7a6a0bd681f69f27e77a493832af47e482"
